# minio-sdk

./: .gitignore  README.md
3rd/inih_cmake/: .gitignore  CMakeLists.txt
3rd/json/.github/workflows/: windows.yml
3rd/json/docs/mkdocs/: requirements.txt
3rd/json/tests/src/: unit-bjdata.cpp  unit-deserialization.cpp  unit-element_access2.cpp  unit-iterators3.cpp  unit-regression2.cpp  unit-serialization.cpp  unit-udt_macro.cpp
demo/: CMakeLists.txt
demo/include/: testMinio.h
demo/src/: main.cpp  testMinio.cpp
minio-cpp/: CMakeLists.txt
minio-cpp/examples/: UploadObject.cc
minio-cpp/src/: http.cc
